--- a/AllergyApp/src/pages/restaurants/restaurants.page.html
+++ b/AllergyApp/src/pages/restaurants/restaurants.page.html
@@ -5,5 +5,10 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>We need an ionic list here.</h2>
+      <ion-list>
+        <ion-item *ngFor="let place of rest">
+         
+        </ion-item>
+
+      </ion-list>
 </ion-content>
