--- a/AllergyApp/src/pages/restaurants/restaurants.page.html
+++ b/AllergyApp/src/pages/restaurants/restaurants.page.html
@@ -7,7 +7,8 @@
 <ion-content padding>
       <ion-list>
         <ion-item *ngFor="let place of rest">
-         
+        <h1> {{place.name}} </h1>
+        <h2> {{place.vicinity}} </h2>
         </ion-item>
 
       </ion-list>
