--- a/AllergyApp/src/pages/allergies/allergies.page.html
+++ b/AllergyApp/src/pages/allergies/allergies.page.html
@@ -10,7 +10,7 @@
   <ion-list>
       <ion-item *ngFor ="let allergy of allergy_list">
         <ion-label>{{allergy.name}}</ion-label>
-        <ion-checkbox color="purple" checked="false"> </ion-checkbox>
+        <ion-checkbox color="danger" checked="false" (ionChange) = "change(allergy)"> </ion-checkbox>
       </ion-item>
   </ion-list>
 </ion-content>
