--- a/AllergyApp/src/pages/restaurants/restaurants.page.html
+++ b/AllergyApp/src/pages/restaurants/restaurants.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Restaurants</ion-title>
+    <ion-title style="background-color: rgb(255, 152, 45)"><h3 style="color: white">Restaurants</h3></ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -20,8 +20,6 @@
 				 </div>
 
 				 <p style="color: gray">{{place.vicinity}}</p>
-
-      
 
         </ion-item>
 
